src/assets/css/one-lines.scss
.w-50px {
   width: 50px;
}

.h-24px {
   height: 24px;
}

.h-50px {
   height: 50px;
}

.lh-0 {
   line-height: 0;
}

.lh-inherit {
   line-height: inherit;
}

.op-08 {
   opacity: 0.5;
   text-shadow: 0 0 2px rgb(0, 0, 0, 0.5);
}

.op-05 {
   opacity: 0.5;
}

.op-03 {
   opacity: 0.3;
}

.min-vh-100 {
   min-height: 100vh;
}

.mt-n3 {
   margin-top: -14px !important;
}

.theme-transition {
   transition: background-color 1s, color 1s;
}

.lh-initial {
   line-height: initial;
}

